@@ -135,6 +135,10 @@ Trunk (unreleased changes)
     HADOOP-1803.  Generalize build.xml to make files in all
     src/contrib/*/bin directories executable.  (stack via cutting)
 
+    HADOOP-1739.  Let OS always choose the tasktracker's umbilical
+    port.  Also switch default address for umbilical connections to
+    loopback.  (cutting)
+
 Release 0.14.1 - (unreleased)
 
   BUG FIXES
